--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book play</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Noto+Serif+Khojki:wght@500&family=Roboto&display=swap"
         rel="stylesheet">
 </head>
 
@@ -46,7 +42,7 @@
     <!-- main2 -->
     <div id="main2">
         <div class="mainchild">
-            <div class="box1">
+            <div class="box">
                 <span class="heading0">Book Grounds</span>
                 <img class="groundicon" src="./assets/images/groundicon.png" alt="ground">
                 <p class="boxcontent1">Book ground near by your place and play with privacy with your friends</p>
@@ -61,7 +57,7 @@
 
 
             </div>
-            <div class="box1">
+            <div class="box">
                 <span class="heading2">Find Players</span>
                 <img class="usericon" src="./assets/images/groupuser.png" alt="ground">
 
@@ -69,7 +65,7 @@
 
 
             </div>
-            <div class="box1">
+            <div class="box">
                 <span class="heading1">Manage Profile</span>
                 <img class="usericon" src="./assets/images/manageuser.png" alt="ground">
                 <p class="boxcontent1"> Manage your playing profile with us.Earn stars with game you play with your
@@ -85,6 +81,7 @@
 
         <h2 class="sportsheading">Play all kind of sports</h2>
         <div class="rotationcont">
+            <!-- imagerotation -->
             <div class="imagerot">
                 <img class="roationimage" src="./assets/images/playingc friends.jpg" alt="cricket">
                 <img class="roationimage" src="./assets/images/badminton.png" alt=" badminton">
@@ -101,10 +98,11 @@
 
 
     </div>
+    <!-- review section -->
     <div id="review">
-        <div class="person1">
+        <div class="person">
             <p>Person1</p><br>
-            <img class="person" src="./assets/images/reviewer2.jpg" alt="person1"><br>
+            <img class="personimg" src="./assets/images/reviewer2.jpg" alt="person1"><br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p><br>
@@ -118,9 +116,9 @@
 
             </div>
         </div>
-        <div class="person1">
-            <p>Person1</p><br>
-            <img class="person" src="./assets/images/reviewer2.jpg" alt="person1"><br>
+        <div class="person">
+            <p>Person2</p><br>
+            <img class="personimg" src="./assets/images/reviewer2.jpg" alt="person1"><br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p><br>
@@ -134,9 +132,9 @@
 
             </div>
         </div>
-        <div class="person1">
-            <p>Person1</p><br>
-            <img class="person" src="./assets/images/reviewer2.jpg" alt="person1"><br>
+        <div class="person">
+            <p>Person3</p><br>
+            <img class="personimg" src="./assets/images/reviewer2.jpg" alt="person1"><br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
                 ex ea commodo consequat.</p><br>
@@ -152,6 +150,8 @@
         </div>
 
     </div>
+     <!-- review section -->
+     <!-- footer -->
     <footer>
         <div id="footer1">
             <div class="row">
@@ -193,6 +193,7 @@
 
         </div>
     </footer>
+         <!-- footer -->
 </body>
 
 </html>
