--- a/pages/bookinground/bookground.html
+++ b/pages/bookinground/bookground.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="../../assets/css/bookground.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-        <script src="https://kit.fontawesome.com/49a7b6b32a.js" crossorigin="anonymous"  integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" ></script>
+  
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -67,7 +68,7 @@
     <div class="main2">
         <div class="parent">
   
-                <div class="child1">
+                <div class="child">
                     <br>
                     <a href="../../pages/bookinground/ground1.html">
                     <h3 class="groundn">DNS TURF</h3><br>
@@ -92,7 +93,7 @@
             
 
 
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground2.html">
                 <h3 class="groundn">Pitch and Play</h3> <br>
@@ -114,7 +115,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground3.html">
                 <h3 class="groundn">Sports Sanity FC Marina</h3> <br>
@@ -136,7 +137,7 @@
                 </div>
                   </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground4.html">
                 <h3 class="groundn">HotFut SPR City</h3> <br>
@@ -158,7 +159,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground5.html">
                 <h3 class="groundn">Revolt theTurfWar</h3> <br>
@@ -179,7 +180,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground6.html">
                 <h3 class="groundn">Seven Eleven's Turf</h3> <br>
@@ -200,7 +201,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground7.html">
                 <h3 class="groundn">Sky Arena</h3> <br>
@@ -221,7 +222,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground8.html">
                 <h3 class="groundn">Tiento Sports</h3> <br>
@@ -242,7 +243,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground9.html">
                 <h3 class="groundn">Fusion The Turf</h3> <br>
@@ -263,7 +264,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground10.html">
                 <h3 class="groundn">Kovai Arena - Football Turf</h3> <br>
@@ -284,7 +285,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground11.html">
                 <h3 class="groundn">Sport Fit Arena</h3> <br>
@@ -306,7 +307,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground12.html">
                 <h3 class="groundn">Turf Time</h3> <br>
@@ -327,7 +328,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground13.html">
                 <h3 class="groundn">Sivan sports turf</h3> <br>
@@ -348,7 +349,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground14.html">
                 <h3 class="groundn">Sopa's Goal Turf - Sports club</h3> <br>
@@ -369,7 +370,7 @@
                 </div>
                 </a>
             </div>
-            <div class="child1">
+            <div class="child">
                 <br>
                 <a href="../../pages/bookinground/ground15.html">
                 <h3 class="groundn">Turf Play 365</h3> <br>
